# JobSpy

./: README.md  pyproject.toml
jobspy/: __init__.py  __main__.py
